--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,18 @@
-build/
-*.ipr
-run/
-*.iws
-out/
-*.iml
 .gradle/
-output/
+build/
+out/
+classes/
+run/
+*.launch
+.idea/
+*.iml
+*.ipr
+*.iws
+.settings/
+.vscode/
 bin/
-libs/
-
 .classpath
 .project
-.idea/
-classes/
-.metadata
-.vscode
-.settings
-*.launch
+*.DS_Store
+workspace/
+.architectury-transformer/
