Update mod metadata

--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -8,10 +8,8 @@ modId = "better_smithing_ui"
 version = "${version}"
 displayName = "Better Smithing UI"
 authors = "jjblock21"
-description = '''
-Replaces the ugly vanilla smithing menu with an improved version.
-'''
-logoFile = "assets/better_smithing_ui/icon.png"
+description = '''Replaces the ugly vanilla smithing menu with an improved version.'''
+logoFile = "icon.png"
 
 [[dependencies.better_smithing_ui]]
 modId = "forge"
