--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ license = "MIT"
 modId = "better_smithing_ui"
 version = "${version}"
 displayName = "Better Smithing UI"
-authors = "jjblock21"
+authors = "jj21"
 description = '''Replaces the ugly vanilla smithing menu with an improved version.'''
 logoFile = "icon.png"
 
